--- a/style.css
+++ b/style.css
@@ -36,15 +36,15 @@ html {
     max-width: 90%;
   }
   
-  input[type="tel"],
+  input,
   textarea,
   select {
     width: 100%;
-    padding: 8px 20px;
-    margin: 8px 0;
+    padding: 0.8em;
+    margin: 1em 0.2em;
     display: inline-block;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 0.8em;
     box-sizing: border-box;
   }
   
